# advance_nlp_generative_ai_bootcamp

./: .env.example  README.md  pyproject.toml  requirements.txt
1_RAG_INTRO/: introduction_of_rag.ipynb  notes.ipynb
2_LangChain_tutorial/: 1_langchain_chatmodels.ipynb  2_langchain_embedding.ipynb  2_langchain_embedding_HuggingFace.ipynb  3_langchain_promptTempalte.ipynb  4_langchain_chaining.ipynb  5_langchain_parser.ipynb  notes.ipynb  practise.ipynb
3_VECTOR_Database/: notes.ipynb  vector_db_2.ipynb
4_TextSplitter/: notes.ipynb
5_MultimodelRAG/: notes.ipynb
5_VECTOR_DB_Pinecone/: notes.ipynb  pinecone_with_pinecone_api.ipynb
6_MM_RAG/: MM_RAG_Implementation.ipynb  notes.ipynb
6_vector_DB/: MM_RAG_Implementation.ipynb
7_GRAPH_RAG/: Graph_RAG.ipynb  notes.ipynb
8_langgraph-agents/: 1_langraph_introduction.ipynb  2_langgraph_agents.ipynb  3_human_in_loop.ipynb  4_Multiagent.ipynb  notes.ipynb  supervisor_agent.ipynb
DAY29_09MAR_RAG_INTRO/: notes.ipynb
DAY30_15MAR_LangChain_tutorial/: langchain_tutorial.ipynb
