[project]
name = "advance-nlp-generative-ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "pip>=26.0.1",
    "dotenv>=0.9.9",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchaudio>=2.11.0",
    "torchtext>=0.18.0",
    "datasets>=3.2.0",
    "tokenizers>=0.19.1",
    "torchmetrics>=1.9.0",
    "tensorboard>=2.20.0",
    "altair>=6.1.0",
    "wandb>=0.26.1",
    "spacy>=3.8.14",
    "torchinfo>=1.8.0",
    "scikit-learn>=1.8.0",
    "langchain-groq==0.1.9",
    "langchain-google-genai>=1.0.10",
    "langchain-anthropic>=0.1.23",
    "langchain-huggingface>=0.0.3",
    "langchain-openai>=0.1.23",
    "grandalf>=0.8",
    "langchain==0.2.14",
    "langchain-community==0.2.12",
    "langchain-core==0.2.35",
    "faiss-cpu==1.8.0",
    "sentence-transformers==2.7.0",
    "transformers==4.41.2",
    "huggingface-hub==0.23.4",
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
    "tiktoken==0.7.0",
    "pypdf>=6.10.2",
    "pinecone-client>=6.0.0",
    "langgraph>=0.2.16",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "python-dotenv>=1.2.2",
]

